# book

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_projects.bat  generate_projects.sh  main.cpp
design/: cp437.py  gen_moms_json.py  moms.md  moms_mapping.json  todo.md  workflow.md
docs/: bok1.bollbok
ext/: CMakeLists.txt
installer/: CMakeLists.txt
src/: .clang-format  CMakeLists.txt
src/bollapp-gtk/: CMakeLists.txt  bollapp.desktop  bollbok_app.cpp  bollbok_app.h  cellrenderertextcompletion.cpp  cellrenderertextcompletion.h  data_interactions.md  grundbok_view.cpp  grundbok_view.h  main.cpp  main_window.cpp  main_window.h  platform.cpp  platform.h  report_dialog.cpp  report_dialog.h  saldo_view.cpp  saldo_view.h  treeview_enable_edit_next_field.cpp  treeview_enable_edit_next_field.h  treeview_enable_valid.cpp  treeview_enable_valid.h  verifikat_view.cpp  verifikat_view.h
src/bollapp-imgui/: CMakeLists.txt  appicon.rc  book-app.cpp  book-app.h  checksum-fail-dialog.cpp  checksum-fail-dialog.h  color.cpp  color.h  edit-konto-dialog.cpp  edit-konto-dialog.h  file-handler.cpp  file-handler.h  glfw-icon.cpp  glfw-icon.h  imgui-app.cpp  imgui-app.h  imgui-dialog.cpp  imgui-dialog.h  imgui-menu.cpp  imgui-menu.h  imgui-settings.cpp  imgui-settings.h  imgui-window.h  imgui_combo_autoselect.cpp  imgui_combo_autoselect.h  konto-window.cpp  konto-window.h  main.cpp  moms-dialog.cpp  moms-dialog.h  new-verifikat-dialog.cpp  new-verifikat-dialog.h  one-verifikat-window.cpp  one-verifikat-window.h  operation.h  report-window.cpp  report-window.h  saldo-window.cpp  saldo-window.h  save-file-changes-dialog.cpp  (+8 more)
src/bollapp-mfc/: CMakeLists.txt  Resource.h  bollapp.rc  bollframe.cpp  bollframe.h  bollview.cpp  bollview.h  main.cpp  mfcbolldoc.cpp  mfcbolldoc.h  mfcstring.h
src/bolldoc/: CMakeLists.txt  bless.cpp  bolldoc.cpp  bolldoc.h  date.cpp  date.h  moms.cpp  moms.h  pengar.cpp  pengar.h  resultat.cpp  resultat.h  serialize.cpp  serialize.h  test_bolldoc.cpp  test_date.cpp  test_serialize.cpp  test_utils.cpp  timer.h  utils.cpp  utils.h
src/bolldoc/tests/: CMakeLists.txt  test_bolldoc.cpp  test_date.cpp  test_moms.cpp  test_pengar.cpp  test_resultat.cpp  test_serialize.cpp  test_utils.cpp
src/reports/: CMakeLists.txt  report.cpp  report.h
src/reports/tests/: CMakeLists.txt  test_report.cpp
src/sieparse/: CMakeLists.txt  cp437.h  parsenumber.cpp  parsenumber.h  sieparse.cpp  sieparse.h  siewrite.cpp  siewrite.h  string_utils.cpp  string_utils.h
src/sieparse/tests/: CMakeLists.txt  test_sieparse.cpp
tools/: dataparse.py
