install(FILES bollbok.png DESTINATION .)

set_property(INSTALL "$<TARGET_FILE_NAME:bollbok>"
  PROPERTY CPACK_START_MENU_SHORTCUTS "Bollbok"
)

execute_process(
    COMMAND git describe --always HEAD
    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
    RESULT_VARIABLE res
    OUTPUT_VARIABLE REPO_GIT_HASH
    ERROR_QUIET
    OUTPUT_STRIP_TRAILING_WHITESPACE)

set(CPACK_PACKAGE_INSTALL_DIRECTORY "Bollbok")
set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
set(CPACK_SYSTEM_NAME ${CMAKE_VS_PLATFORM_NAME})
set(CPACK_PACKAGE_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${REPO_GIT_HASH}-${CPACK_SYSTEM_NAME}")
set(CPACK_WIX_UPGRADE_GUID "f9a1dfa9-ee6f-407d-9d89-0ef584f66372")
#set(CPACK_WIX_LICENSE_RTF "${CMAKE_CURRENT_SOURCE_DIR}/License.rtf")
set(CPACK_WIX_PRODUCT_ICON "${CMAKE_CURRENT_SOURCE_DIR}/bollbok.ico")
set(CPACK_WIX_UI_BANNER "${CMAKE_CURRENT_SOURCE_DIR}/install_493x58.png")
set(CPACK_WIX_UI_DIALOG "${CMAKE_CURRENT_SOURCE_DIR}/install_493x312.png")
set(CPACK_MONOLITHIC_INSTALL ON)
set(CPACK_GENERATOR WIX)
include(CPack)
